--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/level3.js"></script>
     <script src="js/level4.js"></script>
     <script src="js/level5.js"></script>
+    <script src="js/level6.js"></script>
     <script src="js/gameOver.js"></script>
     <script src="js/endGame.js"></script>
     <script src= "js/game.js"></script>
